X3 C++ PluginFramework

2011-09-28

    * PluginManager: Load a plugin only in the main thread.

2011-08-26

    * Compile x3c on Mac OS X 10.6 using Code::Blocks IDE and XCode GCC.
    * Add log4cplus-1.0.4 source files and cppunit-1.12.1 header files.

2011-08-18

    * Compile x3c on WIN64 platform(Win2008 x64, VC++ 2008 x64).

2011-08-09

    * Rename folders as lowercase.
    * Auto copy files after building VC++ unit-test projects.

------v1.1.3------

2011-08-03

    * Change function name of Ix_Object.
    * Change plugin version to 1.1.3.0.
    
    * Fix Ix_ConfigData and Cx_ConfigSection: Cx_Ptr& GetSection(Cx_Ptr& newnode, ...)

2011-07-21

    * Add Ix_StringCoding (about MD5 and Base64) in TextUtility plugin.

2011-07-18

    * Add parameter 'enableDelayLoading' in Ix_PluginLoader.
    * Enable multiple hosts of plugin manager in PluginManager.h
    * Add Cx_ConfigTransaction(Ix_ConfigData* p).
    * Enable COM plugin to load other plugins.

2011-07-14

    * Add 'x3core' ATLCOM project.
    * The default path of GetAppWorkPath() is %LocalAppData% on Vista
      and later, otherwise is the executable file's folder.

------v1.1.2------

2011-07-10

    * Add UtilFunc/LoadDllHelper.h
    * Add ComHook plugin and TestPlatform to hook CoCreateInstance on Windows.
    * COM plugin is marked as delay-loading plugin.
    * Include winver.h in *.rc

2011-07-08

    * Refact and optimize delay-loading code in PluginManager.
      Call AddObserverPlugin() only when plugin is loading.
    * Move interface file to Interface\ObserverExample in ChangeObserverExample.
    * Add a test case for observer delay-load feature.
    * Add class cache UML diagram.

------v1.1.1------

2011-07-05

    * Add UML diagram.
    * Remove 'ASSERT(0 == nul)' in XComPtr.h
    * Add notes in Ix_PluginLoader.h and XModuleImpl.h

2011-07-04

    * Add GetLocalAppDataPath() using SHGetKnownFolderPath for Vista, Win7 and Win2008.
    * Move delay-load implement code into DelayLoad.cpp
