@@ -5,31 +5,31 @@
 
 #include "x3win.h"
 
-bool OpenFileForRead(HANDLE& hfile, const wchar_t* filename)
+bool x3OpenFileForRead(HANDLE& hfile, const wchar_t* filename)
 {
     hfile = ::CreateFileW(filename,
         GENERIC_READ, FILE_SHARE_READ, NULL, OPEN_EXISTING, 0, NULL);
     return hfile != INVALID_HANDLE_VALUE;
 }
 
-bool OpenFileForWrite(HANDLE& hfile, const wchar_t* filename)
+bool x3OpenFileForWrite(HANDLE& hfile, const wchar_t* filename)
 {
     hfile = ::CreateFileW(filename,
         GENERIC_WRITE, 0, NULL, CREATE_ALWAYS, 0, NULL);
     return hfile != INVALID_HANDLE_VALUE;
 }
 
-bool CloseFile(HANDLE file)
+bool x3CloseFile(HANDLE file)
 {
     return !!CloseHandle(file);
 }
 
-HMODULE LoadLibraryExW(const wchar_t* filename)
+HMODULE x3LoadLibrary(const wchar_t* filename)
 {
     return ::LoadLibraryExW(filename, NULL, LOAD_WITH_ALTERED_SEARCH_PATH);
 }
 
-bool CheckFileAttributes(const wchar_t* filename, bool* readonly, bool* folder)
+bool x3CheckFileAttributes(const wchar_t* filename, bool* readonly, bool* folder)
 {
     DWORD attr = GetFileAttributesW(filename);
 
@@ -41,12 +41,12 @@ bool CheckFileAttributes(const wchar_t* filename, bool* readonly, bool* folder)
     return attr != (DWORD)-1;
 }
 
-bool SetFileAttributesNormal(const wchar_t* filename)
+bool x3SetFileAttributesNormal(const wchar_t* filename)
 {
     return !!SetFileAttributesW(filename, FILE_ATTRIBUTE_NORMAL);
 }
 
-bool InMainThread()
+bool x3InMainThread()
 {
     static DWORD s_id = 0;
     if (s_id == 0)
