@@ -3,6 +3,7 @@ X3 C++ PluginFramework
 2011-09-28
 
     * PluginManager: Load a plugin only in the main thread.
+    * Add the prefix of 'x3' to the portability functions in x3win.h
 
 2011-08-26
 
